<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:background="?android:attr/selectableItemBackground">

    <!-- Product Image and Details -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginBottom="10dp">

        <!-- Product Image -->
        <ImageView
            android:id="@+id/productImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/product_image" />

        <!-- Product Details -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="14sp"
                android:textColor="@android:color/holo_red_dark" />
        </LinearLayout>

        <!-- Add to Cart Button (side of product details) -->
        <Button
            android:id="@+id/addToCartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add to Cart"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <!-- Checkout Button at the Bottom -->
    <Button
        android:id="@+id/btnCheckout"
        android:text="@string/go_to_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>
</LinearLayout>
